architecture/front-end/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: prod
spec:
  selector:
    matchLabels:
      app: front-end
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: mathiskrr/breizhsport-front:develop
          ports:
            - containerPort: 4200
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 250Mi
