architecture/front-end/service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 4200
  selector:
    app: front-end
